Prometheus Soundpack Changes:
Use the find function of your text editor and search for ++ to find the start of major version sections.
++version 4.0.4dev
This is a development release, things may break.
1. Fixes broken PM sounds.
2. Rewrites readme to be easier to read.
3. removes the thesaurus plugin.
4. removes extraneous files that weren't needed.
5. fixes wormhole recall remotes.
++Version 4.0.3
- Added an option to toggle the sound of roundtimes.
- Updated the Soundpack.txt file.
- Fixed the Accelerator keys to control the volumes.
- Due to reduce spam, in space combats, you'll see no longer any firing messages if your ship or other ships in the sector are firing at X-Loritan ships only.
- If objects are one unit away from your current location in space when scanning them you will in additonal hear a second small beep sound.
- The All buffer is now available permanently. It was optionally in a previous version.
- The ground combat sounds are now totally random. Enjoy the entertainment.
- Added a Thesaurus lookup feature.
- Added Alt+F9, Alt+F10, and Alt+F11 to toggle the global sounds, room sounds, and combat sounds. You can mute or unmute them.
- Added channel sounds for TeamTalk and Stream.
- Added a warning sound trigger for relics when the self-destruction starts by 1 minute now.
- Fixed a bug with the computer reports when the single objects has been detected in the sector.
- Added sounds for the verb code editor if the verb is programmed or failed. Enjoy it, Hosts!
- Updated the sound trigger for the cash display.
- Updated the sound for announcements, and added a different sound for sub-announcements.

++Version 4.0.1
- Added an option to toggle the sound of roundtimes.