@@ -1,17 +1,0 @@
-[Settings]
-NavigationMode=1
-VolumeCombats=25
-Combats=1
-Rooms=0
-RoomVolume=10
-Sounds=1
-ShipAlarm=0
-Socials=1
-CombatShips=0
-NumpadMode=1
-VolumeSounds=25
-CombatVolume=15
-SoundVolume=35
-VolumeRooms=25
-Gender=1
-CombatHands=0
