@@ -10255,17 +10255,17 @@ SoundFolder = string.gsub(GetInfo(74), "\\", "/")
 ConfigTable = {}
 ConfigTable.Settings = {}
 ConfigTable.Settings.ScreenReader = "MushReader"
-ConfigTable.Settings.SoundVolume = 20
-ConfigTable.Settings.RoomVolume = 5
-ConfigTable.Settings.CombatVolume = 15
+ConfigTable.Settings.SoundVolume = 50
+ConfigTable.Settings.RoomVolume = 50
+ConfigTable.Settings.CombatVolume = 50
 ConfigTable.Settings.GlobalSounds = true
 ConfigTable.Settings.RoomSounds = true
 ConfigTable.Settings.CombatSounds = true
-ConfigTable.Settings.Music = true
+ConfigTable.Settings.Music = false
 ConfigTable.Settings.Numpad = true
-ConfigTable.Settings.SalvagingMessages = true
-ConfigTable.Settings.GrabbingMessages = true
-ConfigTable.Settings.HarvestingMessages = true
+ConfigTable.Settings.SalvagingMessages = false
+ConfigTable.Settings.GrabbingMessages = false
+ConfigTable.Settings.HarvestingMessages = false
 ConfigTable.Settings.Roundtime = true
 
 ConfigFile = require("ini")
