@@ -27,8 +27,8 @@ download link<br>
 <a href="promo-mushclient-bundle401.zip">download version 4.0.1</a><br>
 <h1>development release</h1>
 <P>This is a development   release, and may have bugs, and unstable code. You download it at your own risk.<br>
-sha256: ec97cd96100219db1dc387515e561fe9091b7d58a3d712589259dc08e6ea88ae
-last updated: 4:23AM eastern, July 7, 2020.<br>
+sha256: 0ea63d4be27aa09ecffdb8e934393994fda97d5cd60de2f4684fe4cae2867907
+last updated: 2:30AM eastern, July 10, 2020.<br>
 <a href="prometheus-dev.zip">download the latest development code</a>
 </P>
 </body>
