@@ -7,6 +7,7 @@ This is a development release, things may break.
 3. removes the thesaurus plugin.
 4. removes extraneous files that weren't needed.
 5. fixes wormhole recall remotes.
+6. regags salvaging, and harvesting and grabbing messages by default. you'll have to remove config.txt to see this change.
 ++Version 4.0.3
 - Added an option to toggle the sound of roundtimes.
 - Updated the Soundpack.txt file.
